--- a/docs/04_More_Data_More_Maps.Rmd
+++ b/docs/04_More_Data_More_Maps.Rmd
@@ -1,6 +1,8 @@
 ---
 title: Geospatial Data Fundamentals in R
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
